--- a/src/jecode/views/html/base.html
+++ b/src/jecode/views/html/base.html
@@ -46,8 +46,7 @@
 	 data-hashtags="jecode">Tweeter</a>
       
       <script>!function(d,s,id){var
-	js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
-	'script', 'twitter-wjs');
+	js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','twitter-wjs');
       </script>
 
     </div>
